; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/netronome/nfp/extr_nfp_net_common.c_nfp_net_cleanup_vector.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/netronome/nfp/extr_nfp_net_common.c_nfp_net_cleanup_vector.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfp_net = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }
%struct.nfp_net_r_vector = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nfp_net*, %struct.nfp_net_r_vector*)* @nfp_net_cleanup_vector to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nfp_net_cleanup_vector(%struct.nfp_net* %0, %struct.nfp_net_r_vector* %1) #0 {
  %3 = alloca %struct.nfp_net*, align 8
  %4 = alloca %struct.nfp_net_r_vector*, align 8
  store %struct.nfp_net* %0, %struct.nfp_net** %3, align 8
  store %struct.nfp_net_r_vector* %1, %struct.nfp_net_r_vector** %4, align 8
  %5 = load %struct.nfp_net_r_vector*, %struct.nfp_net_r_vector** %4, align 8
  %6 = getelementptr inbounds %struct.nfp_net_r_vector, %struct.nfp_net_r_vector* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @irq_set_affinity_hint(i32 %7, i32* null)
  %9 = load %struct.nfp_net*, %struct.nfp_net** %3, align 8
  %10 = getelementptr inbounds %struct.nfp_net, %struct.nfp_net* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %2
  %15 = load %struct.nfp_net_r_vector*, %struct.nfp_net_r_vector** %4, align 8
  %16 = getelementptr inbounds %struct.nfp_net_r_vector, %struct.nfp_net_r_vector* %15, i32 0, i32 2
  %17 = call i32 @netif_napi_del(i32* %16)
  br label %22

18:                                               ; preds = %2
  %19 = load %struct.nfp_net_r_vector*, %struct.nfp_net_r_vector** %4, align 8
  %20 = getelementptr inbounds %struct.nfp_net_r_vector, %struct.nfp_net_r_vector* %19, i32 0, i32 1
  %21 = call i32 @tasklet_disable(i32* %20)
  br label %22

22:                                               ; preds = %18, %14
  %23 = load %struct.nfp_net_r_vector*, %struct.nfp_net_r_vector** %4, align 8
  %24 = getelementptr inbounds %struct.nfp_net_r_vector, %struct.nfp_net_r_vector* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load %struct.nfp_net_r_vector*, %struct.nfp_net_r_vector** %4, align 8
  %27 = call i32 @free_irq(i32 %25, %struct.nfp_net_r_vector* %26)
  ret void
}

declare dso_local i32 @irq_set_affinity_hint(i32, i32*) #1

declare dso_local i32 @netif_napi_del(i32*) #1

declare dso_local i32 @tasklet_disable(i32*) #1

declare dso_local i32 @free_irq(i32, %struct.nfp_net_r_vector*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
